<resources>
    <string name="app_name">ResuFair</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_button">Not a member?</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_status">StatusActivity</string>
    <string name="welcome_regis">Registration</string>
    <string name="re_password">Enter password again</string>
    <string name="regis_button">Submit</string>
    <string name="user_type_1">JobSeeker</string>
    <string name="user_type_2">Company</string>
    <string name="company_option1">Add Candidate</string>
    <string name="company_option2">Edit Profile</string>
    <string name="candidate_signup_hint1">Last Name</string>
    <string name="candidate_signup_hint2">First Name</string>
    <string name="company_signup_hint1">Company Name</string>
    <string name="company_signup_hint2">Information</string>
</resources>
